[package]
name = "vanctransit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vanctransit"
crate-type = ["cdylib"]

[dependencies]
file_diff = "1.0.0"
testdir = "0.9.1"

[dependencies.pyo3]
version = "0.21.2"
features = ["abi3-py310"] # Python 3.10

[lints.rust]
unsafe_code = "forbid" # Allow unsafe code only if you understand what you are doing

[profile.release]
# debug = true      # Debug symbols for our profiler.
lto = true        # Link-time optimization.
codegen-units = 1 # Slower compilation but faster code.
