[build-system]
requires = [
    "maturin ~= 1.10.1",
    "setuptools==80.9.0",
    "wheel==0.45.1",
]
build-backend = "maturin"

[project]
name = "vanctransit"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Utilities",
]
dependencies = [
    "matplotlib ~= 3.10.7",
    "maturin ~= 1.10.1",
    "osmnx ~= 2.0.6",
    "pyqt6 ~= 6.9.1",
    "setuptools==80.9.0",
    "types-setuptools==80.9.0.20250822",        # Bump types-* only with mypy
    "typing-extensions ~= 4.15.0",
    "uv >= 0.9.9",        # CI looks out for the comparison: >=
    "wheel==0.45.1",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
test = [
    "basedpyright ~= 1.33.0",
    "coverage ~= 7.11.3",
    "mypy ~= 1.18.2",
    "pylint ~= 3.3.9",
    "pyrefly ~= 0.41.2",
    "pytest ~= 9.0.1",
    "pytest-cov ~= 7.0.0",
    "pytest-dependency ~= 0.6.0",
    "pytest-instafail ~= 0.5.0",
    "pytest-mypy ~= 1.0.1",
    "pytest-order ~= 1.3.0",
    "pytest-pylint ~= 0.21.0",
    "pytest-randomly ~= 4.0.1",
    "pytest-ruff ~= 0.5",
    "pytest-ty ~= 0.1.3",
    "pytest-vulture ~= 2.2.2",
    "pytest-xdist ~= 3.8.0",
    "ruff ~= 0.14.5",
    "sphinx ~= 8.2.3",
    "ty ~= 0.0.1a26",
    "vulture ~= 2.14",
]

[project.scripts]
print_cli_args = "vanctransit._vanctransit:print_cli_args"
print_something = "vanctransit._vanctransit:print_something"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python/"
module-name = "vanctransit._vanctransit"

##### Other tools #####

[tool.basedpyright]
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "build/", "target/"]
extraPaths = ["python/"]
pythonVersion = "3.11"
reportImplicitStringConcatenation = false  # Other linters cover this in better ways
typeCheckingMode = "recommended"

[tool.coverage.report]
# Taken from: https://coverage.readthedocs.io/en/coverage-5.5/config.html#syntax
exclude_lines = [
    "def __repr__",               # Ignore missing debug-only code
    "except ImportError(.*):",    # Likely Python version-specific code
    "if 0:",                      # Ignore non-runnable code not being run
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:", # Ignore non-runnable code not being run
    "pragma: no cover",
    "raise AssertionError",       # Ignore tests not hitting defensive assertion code
    "raise NotImplementedError",  # Ignore tests not hitting defensive assertion code
]
fail_under = 20 # Minimum code coverage percent
show_missing = true

[tool.coverage.run]
concurrency = ["multiprocessing"]
omit = [
    "*/.egg/*",
    "*/.eggs/*",
    "*/.tox/*",
    "*/__main__.py",
    "*/build/*",
    "*/dist/*",
]
parallel = true
sigterm = true
source = ["python/vanctransit/", "python/tests/"]

[tool.mypy]
disallow_any_unimported = true
disallow_any_explicit = true
enable_error_code = "deprecated,exhaustive-match,explicit-override,ignore-without-code,mutable-override,possibly-undefined,redundant-expr,redundant-self,truthy-bool,truthy-iterable,unimported-reveal,unused-awaitable,unused-ignore"
exclude = ["build/", "target/"]
namespace_packages = true
pretty = true
python_version = "3.11"
show_error_codes = true
strict = true
warn_unreachable = true

# Add Python modules to be ignored by mypy here
[[tool.mypy.overrides]]
module = ["osmnx", "vanctransit._vanctransit"]
ignore_missing_imports = true

[tool.pylint.basic]
# Good variable names which should always be accepted, separated by a comma
good-names = ["_", "ex", "f", "g", "i", "j", "k", "Run"]

[tool.pylint.design]
max-attributes = 12

[tool.pylint.format]
max-line-length = 88

[tool.pylint.imports]
allow-any-import-level = ["resource", "winreg"]

[tool.pylint.main]
ignore-paths = ["^build/*, ^target/testdir-*/*"]  # Especially for maturin projects
# Use multiple processes to speed up Pylint.
# Note that sometimes the duplicate-code checker runs properly only when set to 1
jobs = 3
# Whole list retrieved on 2025-10-12 from: https://pylint.pycqa.org/en/latest/user_guide/checkers/extensions.html
load-plugins = [
    "pylint.extensions.bad_builtin",
    "pylint.extensions.broad_try_clause",
    "pylint.extensions.check_elif",
    "pylint.extensions.code_style",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.consider_refactoring_into_while_condition",
    "pylint.extensions.consider_ternary_expression",
    "pylint.extensions.dict_init_mutate",
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle",
    "pylint.extensions.dunder",
    "pylint.extensions.empty_comment",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.for_any_all",
    # "pylint.extensions.magic_value",  # Too-opinionated
    "pylint.extensions.mccabe",
    "pylint.extensions.no_self_use",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_loop_name",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
    "pylint.extensions.while_used",
]
# Pickle collected data for later comparisons
persistent = "no"

[tool.pylint.messages_control]
disable = ["locally-disabled", "suppressed-message"]
enable = [
    "bad-inline-option",
    "consider-using-augmented-assign",
    "deprecated-pragma",
    "file-ignored",
    "prefer-typing-namedtuple",
    "raw-checker-failed",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "use-symbolic-message-instead",
    "useless-suppression",
]

[tool.pylint.parameter_documentation]
accept-no-param-doc = "no"
accept-no-raise-doc = "no"
accept-no-return-doc = "no"
accept-no-yields-doc = "no"

[tool.pylint.reports]
# Activate the evaluation score
score = "no"

[tool.pylint.similarities]
ignore-comments = "yes"
# Ignore imports when computing similarities
ignore-imports = "yes"
min-similarity-lines = 8

[tool.pylint.typing]
# Min Python version to use for typing related checks, e.g. ``3.7``
# This should be equal to the min supported Python version of the project
py-version = "3.11"

[tool.pyrefly]
project-excludes = ["build/"]
python-version = "3.11"
search-path = [
    "python/",
]

[tool.pytest]
addopts = [
    "-n=auto",
    "--dist=loadscope",
    "--durations=7",
    "--error-on-failed-ordering",
    "--ignore=target/",
    "--instafail",
    "--no-cov-on-fail",
    "--order-dependencies",
    "--pylint-error-types=CRWEFI",
    "--strict-markers",
]
filterwarnings = [
    "error::UserWarning",  # Only beartype issues in this package are interesting
]
log_level = "DEBUG"
markers = ["online", "slow"]
testpaths = ["python/tests/"]
xfail_strict = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "COM812",  # Seems to add trailing comma even when arguments already fit on one line
    "D203",    # D211 is used by default, which is incompatible with this
    "D213",    # D212 is used by default, which is incompatible with this
    "EM101",   # String literals is used in exception constructors, stack is readable
    "EM102",   # f-string literals is used in exception constructors, similar to EM101
    "PLR2004", # Difficult to refactor to not use magic values in a big legacy project
    "S603",    # Allow using subprocess methods w/o shell=True, bandit severity is low
    "TRY003",  # Allow specifying long messages outside the exception class
]
select = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
known-local-folder = ["vanctransit"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104"]  # __init__.py files can be blank & not require a docstring
"!vanctransit/**.py" = ["S101"]  # Allow assert keyword use in tests/ but not in package

[tool.ty.rules]
# As of 20251023, ty version 0.0.1a24
# https://github.com/astral-sh/ty/blob/main/docs/reference/rules.md
ambiguous-protocol-member = "error"
deprecated = "error"
division-by-zero = "error"
invalid-ignore-comment = "error"
ignore-comment-unknown-rule = "error"
possibly-missing-attribute = "error"
possibly-missing-implicit-call = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"
redundant-cast = "error"
undefined-reveal = "error"
unresolved-global = "error"
unsupported-base = "error"
unused-ignore-comment = "error"
useless-overload-body = "error"

[tool.ty.terminal]
error-on-warning = true  # Quits with a non-zero exit code if a warning appears

[tool.vulture]
check-entry-points = 0  # maturin repos only
exclude = ["build/", "docs/source/conf_correct.py"]
make_whitelist = true
